syntax = "proto3";

package pb;

option go_package="./;pb";

message User {
    string name = 1;
    int32 age = 2;
}

message CreateRequest {
    User user = 1;
}


message CreateResponse {
    string result = 1;
}

message GetRequest {
}

message GetResponse {
    repeated User user = 1;
}

message DeleteRequest {
    string name = 1;
}

message DeleteResponse {
    repeated User user = 1;
}

message UpdateRequest {
    string name = 1;
    string newName = 2;
}

message UpdateResponse {
    repeated User user = 1;
}

service BasicService {
    rpc Create (CreateRequest) returns (CreateResponse){};
    rpc Get (GetRequest) returns (GetResponse);
    rpc Delete (DeleteRequest) returns (DeleteResponse);
    rpc Update (UpdateRequest) returns (UpdateResponse);
}